Archive2/24/324511686baf6a/output
main.cpp: In function 'int main()':
main.cpp:30:7: error: variable 'u2' set but not used [-Werror=unused-but-set-variable]
    U2 u2;
       ^
cc1plus: all warnings being treated as errors
